尽量调整页面id的命名规则，符合驼峰原则

--- a/smicerp/src/main/resources/templates/pages/financial/item_out.html
+++ b/smicerp/src/main/resources/templates/pages/financial/item_out.html
@@ -109,7 +109,7 @@
         <tr>
             <td style="width:60px;">往来单位：</td>
             <td style="padding:5px;width:130px;">
-                <span id="OrgIdShow"></span>
+                <span id="orgIdShow"></span>
             </td>
             <td style="width:70px;">单据日期：</td>
             <td style="padding:5px;width:130px;">
@@ -132,17 +132,17 @@
         <tr>
             <td style="width:60px;">单据备注：</td>
             <td colspan="8" style="height:35px;">
-                <span id="RemarkShow" style="width: 1070px; height:35px;"></span>
+                <span id="remarkShow" style="width: 1070px; height:35px;"></span>
             </td>
         </tr>
         <tr>
             <td>付款账户：</td>
             <td style="padding:5px;">
-                <span id="AccountIdShow"></span>
+                <span id="accountIdShow"></span>
             </td>
             <td>付款金额：</td>
             <td style="padding:5px;">
-                <span id="ChangeAmountShow"></span>
+                <span id="changeAmountShow"></span>
             </td>
         </tr>
     </table>
