--- a/smicerp/src/main/resources/templates/pages/financial/money_in.html
+++ b/smicerp/src/main/resources/templates/pages/financial/money_in.html
@@ -105,11 +105,11 @@
         <tr>
             <td style="width:60px;">付款单位：</td>
             <td style="padding:5px;width:130px;">
-                <span id="OrgIdShow"></span>
+                <span id="orgIdShow"></span>
             </td>
             <td style="width:70px;">经手人：</td>
             <td style="padding:5px;width:130px;">
-                <span id="HandsPersonIdShow"></span>
+                <span id="handsPersonIdShow"></span>
             </td>
             <td style="width:70px;">单据日期：</td>
             <td style="padding:5px;width:130px;">
@@ -130,13 +130,13 @@
         <tr>
             <td style="width:60px;">单据备注：</td>
             <td colspan="8" style="height:35px;">
-                <span id="RemarkShow" style="width: 1070px; height:35px;"></span>
+                <span id="remarkShow" style="width: 1070px; height:35px;"></span>
             </td>
         </tr>
         <tr>
             <td>优惠金额：</td>
             <td style="padding:5px;width:120px;">
-                <span id="ChangeAmountShow"></span>
+                <span id="changeAmountShow"></span>
             </td>
         </tr>
     </table>
