--- a/smicerp/src/main/resources/templates/pages/materials/retail_back_list.html
+++ b/smicerp/src/main/resources/templates/pages/materials/retail_back_list.html
@@ -143,15 +143,15 @@
         <tr>
             <td style="width:60px;height:50px;">会员卡号：</td>
             <td style="padding:5px;width:200px;">
-                <span id="OrgIdShow"></span>
+                <span id="orgIdShow"></span>
             </td>
             <td style="width:70px;">单据日期：</td>
             <td style="padding:5px;width:200px;">
-                <span id="OperTimeShow"></span>
+                <span id="operTimeShow"></span>
             </td>
             <td style="width:80px;">单据编号：</td>
             <td style="padding:5px;width:200px;">
-                <span id="NumberShow"></span>
+                <span id="numberShow"></span>
             </td>
             <td style="width:70px;"></td>
             <td style="padding:5px;width:150px;">
@@ -169,7 +169,7 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <span id="ChangeAmountShow" class="change-amount-show"></span>
+                            <span id="changeAmountShow" class="change-amount-show"></span>
                         </td>
                     </tr>
                     <tr>
@@ -191,7 +191,7 @@
                     <tr>
                         <td>付款账户：</td>
                         <td align="left" style="width:110px;">
-                            <span id="AccountIdShow"></span>
+                            <span id="accountIdShow"></span>
                         </td>
                     </tr>
                 </table>
@@ -199,7 +199,7 @@
         </tr>
         <tr>
             <td colspan="8" style="width: 1130px; height:35px;">
-                <span id="RemarkShow"></span>
+                <span id="remarkShow"></span>
             </td>
         </tr>
     </table>
