--- a/smicerp/src/main/resources/templates/pages/materials/sale_back_list.html
+++ b/smicerp/src/main/resources/templates/pages/materials/sale_back_list.html
@@ -145,15 +145,15 @@
         <tr>
             <td style="width:70px;">客户：</td>
             <td style="padding:5px;width:130px;">
-                <span id="OrgIdShow"></span>
+                <span id="orgIdShow"></span>
             </td>
             <td style="width:80px;">单据日期：</td>
             <td style="padding:5px;width:140px;">
-                <span id="OperTimeShow"></span>
+                <span id="operTimeShow"></span>
             </td>
             <td style="width:70px;">单据编号：</td>
             <td style="padding:5px;width:140px;">
-                <span id="NumberShow"></span>
+                <span id="numberShow"></span>
             </td>
             <td style="width:70px;"></td>
             <td style="padding:5px;width:130px;"></td>
@@ -168,37 +168,37 @@
         <tr>
             <td style="width:60px;">单据备注：</td>
             <td colspan="8" style="height:35px;">
-                <span id="RemarkShow" style="width: 1070px; height:35px;"></span>
+                <span id="remarkShow" style="width: 1070px; height:35px;"></span>
             </td>
         </tr>
         <tr>
             <td>优惠率：</td>
             <td>
-                <span id="DiscountShow" style="width: 110px;"></span>
+                <span id="discountShow" style="width: 110px;"></span>
                 %
             </td>
             <td>退款优惠：</td>
             <td>
-                <span id="DiscountMoneyShow" style="width: 120px;"></span>
+                <span id="discountMoneyShow" style="width: 120px;"></span>
             </td>
             <td>优惠后金额：</td>
             <td>
-                <span id="DiscountLastMoneyShow" style="width: 120px;"></span>
+                <span id="discountLastMoneyShow" style="width: 120px;"></span>
             </td>
             <td>本次退款：</td>
             <td style="padding:5px">
-                <span id="ChangeAmountShow"></span>
+                <span id="changeAmountShow"></span>
             </td>
             <td style="width:100px;"></td>
         </tr>
         <tr>
             <td>结算账户：</td>
             <td style="padding:5px">
-                <span id="AccountIdShow"></span>
+                <span id="accountIdShow"></span>
             </td>
             <td>本次欠款：</td>
             <td style="padding:5px">
-                <span id="DebtShow"></span>
+                <span id="debtShow"></span>
             </td>
             <td>销售费用：</td>
             <td style="padding:5px">
