--- a/smicerp/src/main/resources/templates/pages/financial/giro.html
+++ b/smicerp/src/main/resources/templates/pages/financial/giro.html
@@ -108,7 +108,7 @@
         <tr>
             <td style="width:60px;">经手人：</td>
             <td style="padding:5px;width:130px;">
-                <span id="HandsPersonIdShow"></span>
+                <span id="handsPersonIdShow"></span>
             </td>
             <td style="width:70px;">单据日期：</td>
             <td style="padding:5px;width:130px;">
@@ -131,17 +131,17 @@
         <tr>
             <td style="width:60px;">单据备注：</td>
             <td colspan="8" style="height:35px;">
-                <span id="RemarkShow" style="width: 1070px; height:35px;"></span>
+                <span id="remarkShow" style="width: 1070px; height:35px;"></span>
             </td>
         </tr>
         <tr>
             <td>付款账户：</td>
             <td style="padding:5px">
-                <span id="AccountIdShow"></span>
+                <span id="accountIdShow"></span>
             </td>
             <td>实付金额：</td>
             <td style="padding:5px">
-                <span id="ChangeAmountShow"></span>
+                <span id="changeAmountShow"></span>
             </td>
         </tr>
     </table>
