--- a/smicerp/src/main/resources/templates/pages/materials/other_out_list.html
+++ b/smicerp/src/main/resources/templates/pages/materials/other_out_list.html
@@ -104,15 +104,15 @@
         <tr>
             <td style="width:60px;">客户：</td>
             <td style="padding:5px;width:130px;">
-                <span id="OrgIdShow"></span>
+                <span id="orgIdShow"></span>
             </td>
             <td style="width:70px;">单据日期：</td>
             <td style="padding:5px;width:130px;">
-                <span id="OperTimeShow"></span>
+                <span id="operTimeShow"></span>
             </td>
             <td style="width:80px;">单据编号：</td>
             <td style="padding:5px;width:140px;">
-                <span id="NumberShow"></span>
+                <span id="numberShow"></span>
             </td>
             <td style="width:70px;"></td>
             <td style="padding:5px;width:140px;"></td>
@@ -127,7 +127,7 @@
         <tr>
             <td style="width:60px;">单据备注：</td>
             <td colspan="8" style="height:35px;">
-                <span id="RemarkShow" style="width: 1070px; height:35px;"></span>
+                <span id="remarkShow" style="width: 1070px; height:35px;"></span>
             </td>
         </tr>
     </table>
